Developed functionalities for insertion
